# DrivingAgent-2020-melodic

./: .travis.yml  Dockerfile  LICENSE  README.md  README.md.orig  ci_build.bash
car_joy/: CMakeLists.txt  package.xml
car_joy/launch/: joystick0.launch
car_joy/src/: joystick.cpp  joystick.hpp  joystick_.cpp
cepton_ros/: CMakeLists.txt  package.xml
cepton_ros/launch/: driver.launch
cepton_ros/src/: driver_nodelet.cpp  driver_nodelet.hpp
drivebywire/: CMakeLists.txt  package.xml
drivebywire/scripts/: middleman.py
drone/drone_training/drone_training/src/: myquadcopter_env.py
gps_kalman_filter/: CMakeLists.txt  package.xml
gps_kalman_filter/cfg/: Ekf.cfg
gps_kalman_filter/rviz/: rviz_config.rviz
gps_kalman_filter/src/: GpsKalmanFilter.cpp  GpsKalmanFilter.h  gps_kf_node.cpp
igvc_self_drive_sim/igvc_self_drive_description/urdf/: gem_sensors.urdf.xacro
igvc_self_drive_sim/igvc_self_drive_description/urdf/sensors/: cepton_vista.urdf.xacro
joytest/: CMakeLists.txt  package.xml
joytest/arduino/: howtomakepkg.txt  speed_measure7.tar.xz
joytest/arduino/GPS/: GPS.ino
joytest/arduino/Steering_motor_with_Estop8/: Steering_motor_with_Estop8.ino
joytest/arduino/comfirmed program/: 20190511.taz  upload.sh
joytest/arduino/comfirmed program/Steering_motor_with_Estop7/: Steering_motor_with_Estop7.ino
joytest/arduino/comfirmed program/accelerate_control7/: accelerate_control7.ino
joytest/arduino/comfirmed program/old_test/: upload.sh
joytest/arduino/comfirmed program/old_test/Steering_motor_with_Estop4/: Steering_motor_with_Estop4.ino
joytest/arduino/comfirmed program/old_test/Steering_motor_with_Estop5/: Steering_motor_with_Estop5.ino
joytest/arduino/comfirmed program/old_test/Steering_motor_with_Estop6/: Steering_motor_with_Estop6.ino
joytest/arduino/comfirmed program/old_test/accelerate_control/: accelerate_control.ino
joytest/arduino/comfirmed program/old_test/accelerate_control3/: accelerate_control3.ino
joytest/arduino/comfirmed program/old_test/accelerate_control4/: accelerate_control4.ino
joytest/arduino/comfirmed program/old_test/accelerate_control5/: accelerate_control5.ino
joytest/arduino/comfirmed program/old_test/accelerate_control6/: accelerate_control6.ino
joytest/arduino/comfirmed program/old_test/brake/: brake.ino
joytest/arduino/comfirmed program/old_test/rearbraketest/: rearbraketest.ino
joytest/arduino/comfirmed program/old_test/rev_and_lamp2/: rev_and_lamp2.ino
joytest/arduino/comfirmed program/old_test/rosserial_motor1_666a/: rosserial_motor1_666a.ino
joytest/arduino/comfirmed program/old_test/speed_measure2/: speed_measure2.ino
joytest/arduino/comfirmed program/old_test/speed_measure3/: speed_measure3.ino
joytest/arduino/comfirmed program/old_test/speed_measure4/: speed_measure4.ino
joytest/arduino/comfirmed program/old_test/speed_measure5/: speed_measure5.ino
joytest/arduino/comfirmed program/old_test/speed_measure6/: speed_measure6.ino
joytest/arduino/comfirmed program/old_test/speed_measure7/: speed_measure7.ino
joytest/arduino/comfirmed program/old_test/speedtestwithoutros/: speedtestwithoutros.ino
joytest/arduino/comfirmed program/old_test/speedtestwithoutros2/: speedtestwithoutros2.ino
joytest/arduino/comfirmed program/old_test/steeringreading/: steeringreading.ino
joytest/arduino/comfirmed program/rev_and_lamp3/: rev_and_lamp3.ino
joytest/arduino/comfirmed program/speed_measure8/: speed_measure8.ino  test.m
joytest/cfg/: gray_angle.cfg
joytest/config/: 70-sensors.rules  example.txt
joytest/launch/: joy_test.launch  joy_test2.launch  joy_test4.launch  joy_test4a.launch  joy_test5.launch  unit_test1to3.launch
joytest/scripts/: gray_line.py  hokuyo_data.py  imagecontrol.py  joy_test2.py  joy_test3.py  matrix_plot.py  topic_transfer2.py  unit_test1to3.py  unit_test4to6.py
lane_detection/: CMakeLists.txt  package.xml
lane_detection/cfg/: LaneDetection.cfg
lane_detection/launch/: camera_driver.launch  test_projection.launch
lane_detection/rviz/: lane_projection.rviz
lane_detection/src/: LaneDetection.cpp  LaneDetection.h  lane_detection_node.cpp  pub_camera_info.py
lane_detection/tests/: CMakeLists.txt
lane_detection/yaml/: lane_camera.yaml
perception/: CMakeLists.txt  nodelets.xml  package.xml
perception/msg/: Object.msg  Objects.msg
perception/src/: Perception.cpp  Perception.h  Point.cpp  Point.hpp  PointMap.cpp  PointMap.hpp  PointMapCell.cpp  PointMapCell.hpp  perception_node.cpp  perception_nodelet.cpp
self_drive_launch/: CMakeLists.txt  package.xml
self_drive_launch/config/: cepton_transforms.json
self_drive_launch/launch/: cepton_sensors.launch  front_camera.launch  perception.launch  self_drive_Gazebo.launch  yolo.launch
self_drive_launch/rviz/: all_system_Gazebo.rviz  cepton_test.rviz
yolo/: CMakeLists.txt  package.xml  readme.md
yolo/msg/: Detection.msg  Detections.msg  SignData.msg  SignDataArray.msg
yolo/src/: YOLO.cpp  YOLO.h  YOLONode.cpp  YOLONode.h  yolo_node.cpp
