<?xml version="1.0"?>
<package format="2">
  <name>drivebywire</name>
  <version>0.0.1</version>
  <description>This is the ROS edge node that tranmits ROS topic information on UDP to the ECU and vice-versa</description>

  <maintainer email="johnbrooks@oakland.edu">John Brooks</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
