<?xml version="1.0"?>
<package format="2">
  <name>lane_detection</name>
  <version>0.0.0</version>
  <description>
    Image processing pipeline for detecting the IGVC Self-Drive lane markings
    and interfacing with the rest of the system
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>costmap_converter</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>usb_cam</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>image_proc</exec_depend>

</package>
