<?xml version="1.0"?>
<package format="2">
  <name>perception</name>
  <version>0.0.1</version>
  <description>
    Node which fuses various sensor information together
  </description>
  <maintainer email="jbrooks@oakland.edu">John Brooks</maintainer>
  <license>BSD2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rosmsg</depend>
  <depend>pcl_ros</depend>
  <depend>yolo</depend>
  <depend>nodelet</depend>
  <depend>message_runtime</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
