<?xml version="1.0"?>
<package format="2">
  <name>self_drive_launch</name>
  <version>0.0.0</version>
  <description>
    Launch files and configuration
  </description>
  <maintainer email="abc@xyz.com">TODO</maintainer>
  <license>BSD2</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
