<?xml version="1.0"?>

<package format="2">
  <name>yolo</name>
  <version>0.0.1</version>
  <description>
    Wraps the YOLO object detection network in a ros node.
  </description>
  <maintainer email="johnbrooks@oakland.edu">John Brooks</maintainer>
  <license>BSD2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>
  	std_msgs
  	</depend>
  <depend>xmlrpcpp</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
